--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
             <h1 class="title">Welcome To <br> <span class="name">Ankan Halder</span> World</h1>
             <h4 class="sub-title">Build Climber and Train Stopper</h4>
             <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi ,prorsdjf;lks
-                necessitatibus
-                ea
                 totam natus veniam aliquam voluptatum dolore dignissimos maiores eaque nobis quidem cum dolor deserunt
                 iure fuga! Quidem praesentium aliquid impedit, autem pariatur quas eaque veniam accusantium animi.</p>
             <button class="btn">Hire Me</button>
@@ -24,6 +22,20 @@
         <div class="first-right">
             <div><img src="img/jhankar2.png" alt=""></div>
         </div>
+    </div>
+    <div class="second-section">
+        <div class="second-right">
+            <div><img src="img/jhankar.png" alt=""></div>
+        </div>
+        <div class="first-left">
+            <h1 class="title">Dream Big</h1>
+            <h4 class="sub-title">Become a web developer</h4>
+            <p class="header-text">I already learned the basic HTML and CSS. I can build any simple website. I can even
+                teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <button class="btn">Download My Resume</button>
+        </div>
+
     </div>
 </body>
 
