--- a/index.html
+++ b/index.html
@@ -30,13 +30,35 @@
         <div class="first-left">
             <h1 class="title">Dream Big</h1>
             <h4 class="sub-title">Become a web developer</h4>
-            <p class="header-text">I already learned the basic HTML and CSS. I can build any simple website. I can even
+            <p class="header-text second-info">I already learned the basic HTML and CSS. I can build any simple website.
+                I can even
                 teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
             <button class="btn">Download My Resume</button>
         </div>
-
+    </div>
+    <div class="third-section-head">
+        <h1 class="exprience">Experiences</h1>
+        <div class="third-section">
+            <div class="third-section-info full-stack">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="name">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="third-section-info mern-stack">
+                <h1>MERN Stack Web Developer</h1>
+                <h3 class="name">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+        </div>
     </div>
 </body>
+<footer>
+    <p>&copy; Ankan Halder 2022, a Programming Hero initiative.</p>
+</footer>
 
 </html>
